# diydb

./: .gitignore  AST.md  Cargo.toml  IR.md  README.md  TODO.md  record.db  test.txt
resources/test/: for_exprs.db  for_exprs.sh  minimal.db  minimal.txt  multipage-1kB-page.db  multipage-1kB-page.sh  multipage-512B-page.db  multipage-512B-page.sh  multipage.db  multipage.sh  schema_table.db  schema_table.sh  threelevel.db  threelevel.sh
src/: IRnotes.txt  ast.rs  ast_to_ir.rs  btree.rs  dbheader.rs  formatting.rs  ir.rs  ir_interpreter.rs  lib.rs  main.rs  optimize_ast.rs  pager.rs  parser.rs  project.rs  pt_to_ast.rs  record.rs  serial_type.rs  sql.pest  sql_type.rs  sql_value.rs  stored_db.rs  stored_table.rs  table.rs  table_traits.rs  temp_db.rs  temp_table.rs  typed_row.rs  vfs.rs
src/btree/: cell.rs  header.rs  interior.rs  leaf.rs  mod.rs  table.rs
tests/: TODO.md  TODO.txt  integration_test.rs
