[package]
name = "diydb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
byteorder = "1.4.3"
sqlite_varint="0.1.2"
pest = "2.0"
pest_derive = "2.0"
itertools = "0.10.5"
hex = "0.4.3"
anyhow = "1.0.70"
streaming-iterator = "0.1.9"
enum-as-inner = "0.5.1"

